added contact and errorpage

--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -5,8 +5,7 @@
 }
 
 .footer{
-    background: #0f1014;  
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); 
+    background-color: #080217;
 }
 
 .footer-container{
@@ -60,18 +59,19 @@
     font-weight: 500;
 }
 
+.footer-social a{
+    margin-left: 10%;
+    padding:1px 5px;
+    background-color: white;
+    border-radius: 20px;
+}
 
 .footer-social .social-icons{
     margin-top:15%;
 }
 
-.social-icons a{
-    color:white;
-    transition: 0.4s ease-in-out;
-}
-
-.social-icons a:hover{
-    transform: scale(1.2);
+.footer-social a:hover{
+    background-color: rgb(189, 187, 187);
 }
 
 .footer-bottom{
