--- a/client/src/Components/Timeline/Timeline.css
+++ b/client/src/Components/Timeline/Timeline.css
@@ -1,33 +1,25 @@
-.timelinesection{
-    background: #0f1014;
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
-    color: white;
-}
-
 .timeline{
     position: relative;
     max-width: 1200px;
-    padding:2% 8%;
+    margin:2% auto;
+    padding:0 8%;
 }
 
 .timeline-heading{
     font-size: 3rem;
-    font-weight: 600;
+    font-weight: 500;
     text-align: center;
-    padding:3%;
+    margin:3%;
 }
 
 .container{
     position:relative;
     width:45%;
-    border: 3px solid rgb(10, 83, 136);
+    border: 1px solid rgb(218, 159, 159);
     margin:5% 0;
     animation:movedown 1s linear forwards;
     opacity: 0;
-    color:black;
-    cursor: pointer;
-    border-radius: 5%;
-    background: #4e54c8;
+    color: black;
 }
 
 @keyframes movedown{
@@ -46,28 +38,24 @@
 }
 
 .container:nth-child(2){
-    animation-delay: 1s;
-}
-
-.container:nth-child(3){
     animation-delay: 2s;
 }
 
-.container:nth-child(4){
+.container:nth-child(3){
     animation-delay: 3s;
 }
 
+.container:nth-child(4){
+    animation-delay: 5s;
+}
+
 .container:nth-child(5){
-    animation-delay: 4s;
+    animation-delay: 6s;
 }
 
 .text-box{
     background-color: white;
     padding:3%;
-    border-top-left-radius:60%;
-    border-bottom-right-radius: 30%;
-    border-bottom-left-radius: 10%;
-    border-top-right-radius: 15%;
 }
 
 .left-container{
@@ -82,12 +70,10 @@
     position: absolute;
     width:50px;
     height:50px;
+    border-radius: 50%;
     right:-13%;
     top:20%;
     z-index:10;
-    border:2px solid transparent;
-    border-image:linear-gradient(45deg, #0e1f68, #c40323);
-    border-image-slice: 1;
 }
 
 .right-container img{
@@ -97,12 +83,12 @@
 .timeline::after{
     content: "";
     position: absolute;
-    width:2px;
+    width:5px;
     height:100%;
-    background-color: rgb(98, 96, 96);
+    background: rgb(255, 251, 251);
     top:0;
-    left:49.3%;
-    z-index:1;
+    left:49%;
+    z-index: -1;
     border-radius: 20px;
     animation:moveline 7s linear forwards;
 }
@@ -115,6 +101,30 @@
         height:100%;
     }
 }
+
+/* .left-container-arrow{
+    height: 0;
+    width:0;
+    position: absolute;
+    z-index: 1;
+    top:30px;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 15px solid black;
+    right:-2.5%;
+}
+
+.right-container-arrow{
+    height: 0;
+    width:0;
+    position: absolute;
+    z-index: 1;
+    top:30px;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-right: 15px solid black;
+    left:-2.5%;
+} */
 
 @media screen and (max-width:1000px){
     .container img{
@@ -171,102 +181,3 @@
         left:-17%;
     } 
 }
-
-
-/* grid animation  */
-
-
-:root{
-    --gird-width:30px;
-    --gird-height:30px;
-    --line-color:white;
-    --dot-color:white;
-    --dot-size:2px;
-    --point-gap-width:calc(var(--gird-width) * 4);
-    --point-gap-height:calc(var(--gird-height) * 4);
-  }
- 
-  .grid-bg{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  .ba-grid{
-    position: relative;
-    z-index: 1;
-    
-    background: rgb(23, 23, 23); 
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); 
-  }
-  
-  
-  .ba-grid:before,
-  .ba-grid:after,
-  .inner:before,
-  .inner:after{
-    content:'';
-    position: absolute;
-    z-index: 1;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    mix-blend-mode: overlay;
-  }
-  
-  .ba-grid:before{
-    background-image: 
-      linear-gradient(var(--line-color), transparent 1px),
-      linear-gradient(to right, var(--line-color), transparent 1px);
-    background-size:
-      100% var(--gird-height),
-      var(--gird-width) 100%;
-  }
-  
-  .ba-grid:after{
-    background-image: radial-gradient(var(--dot-color) 1px, transparent 1px);
-    background-size: var(--point-gap-width) var(--point-gap-height);
-    background-position: calc(var(--point-gap-width) / 2) calc(var(--point-gap-height) / 2);
-  }
-  
-  
-  
-  .inner:before,
-  .inner:after{
-    background-image: radial-gradient(var(--dot-color) var(--dot-size), transparent var(--dot-size));
-    background-size: var(--point-gap-width) var(--point-gap-height);
-    background-position: calc(var(--point-gap-width) / 2) calc(var(--point-gap-height) / 2);  
-  
-  }
-  
-  .inner:after{
-    
-    transform: scale(1.1, 1.1);
-  }
-  
-  .inner:before{
-  
-    transform: scale(1.2, 1.2);
-  }
-  
-  .anim:after{
-    animation: 6.4s linear move infinite;
-  }
-  
-  .anim .inner:after{
-    animation: 3.2s linear move infinite;
-  }
-  
-  .anim .inner:before{
-    animation: 1.6s linear move infinite;
-  }
-  
-  @keyframes move{
-    0%{
-      background-position:calc(var(--point-gap-width) / 2) calc(var(--point-gap-height) / 2);
-    }
-    100%{
-      background-position:calc(var(--point-gap-width) / 2) calc(var(--point-gap-height) / 2 * -1);
-    }
-  }
