--- a/client/src/Components/Timeline/Timeline.css
+++ b/client/src/Components/Timeline/Timeline.css
@@ -1,6 +1,6 @@
 .timelinesection{
     background: #0f1014;
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+    /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); */
     color: white;
 }
 
@@ -197,7 +197,7 @@
     z-index: 1;
     
     background: rgb(23, 23, 23); 
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); 
+    /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  */
   }
   
   
