--- a/client/src/pages/Team/Team.css
+++ b/client/src/pages/Team/Team.css
@@ -1,32 +1,32 @@
-.team{
-    background: #0f1014;  
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
-    color:white;
+.team {
+    background: #0f1014;
+    color: white;
 }
 
 .memberHeading {
     text-align: center;
     font-size: 3rem;
-    padding: 2%;
+    padding: 4%;
     font-weight: 500;
 }
 
-.teamsection{
+.teamsection {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
 .member-card {
-    width: 300px;
-    height: 300px;
     background-color: rgba(146, 142, 142, 0.8);
     border-radius: 4%;
-    margin: 2%;
+    padding: 0.7%;
+    margin:2%;
+    cursor: pointer;
 }
 
 .card-content {
-    padding: 5%;
+    width: 300px;
+    height: 300px;
     text-align: center;
     transition: transform 1s ease-in-out;
 }
@@ -34,18 +34,20 @@
 .profile-picture {
     width: 100%;
     height: 100%;
+    border-radius: 10%;
 }
 
 .member-name {
     color: #fff;
-    font-size: 1.6em;
+    font-size: 2rem;
+    text-transform: uppercase;
 }
 
 .member-role {
-    color: #c9c7c7;
-    margin-bottom: 3%;
+    color: #928a8a;
+    margin-bottom: 2%;
+    font-size: 1.5rem;
 }
-
 
 .social-icons {
     display: flex;
@@ -55,11 +57,11 @@
 
 .social-icons div {
     cursor: pointer;
-    transition: all 0.4s ease-in-out;
+    transition: transform 0.5s ease-in-out;
 }
 
 .social-icons div a {
-    color: rgb(22, 114, 227);
+    color: rgb(11, 94, 228);
 }
 
 .social-icons div:hover {
@@ -70,13 +72,15 @@
 .member-detail {
     visibility: hidden;
     opacity: 0;
-    transition: visibility 0s, opacity 0.3s ease-in-out;
     box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.5);
     border-radius: 5%;
+    backdrop-filter: blur(15px);
 }
 
 .card-content:hover {
     transform: scale(1.03);
+    box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.5);
+
 }
 
 .member-card:hover .member-detail {
@@ -84,4 +88,3 @@
     opacity: 1;
     transform: translateY(-110%);
 }
-
