--- a/client/src/Components/About/About.css
+++ b/client/src/Components/About/About.css
@@ -1,30 +1,36 @@
-.aboutsection{
+.aboutsection {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding:3%;
-    color:white;
-    background: #0f1014;  
+    padding: 3%;
+    color: white;
+    background: #0f1014;
     /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);   */
 }
 
-.aboutheading{
+.aboutheading {
     font-size: 3rem;
-    font-weight: 500;
+    font-weight: 600;
 }
 
-.aboutcontent{
+.aboutcontent {
     font-size: 1.2rem;
     text-align: justify;
     margin: 2% 4%;
 }
 
+.aboutcontent .para {
+    background-color: rgba(22, 77, 124, 0.5);
+    padding: 10px;
+    border-radius: 10px;
+}
+
 .aboutcontent .register {
     font-size: 1.5rem;
     text-align: center;
-    margin:2% auto;
+    margin: 3% auto;
     background-color: #3a11ce;
-    padding:0.5% 1%;
+    padding: 0.5% 3%;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -33,9 +39,9 @@
     z-index: 1;
 }
 
-.registertext{
+.registertext {
     text-decoration: none;
-    color:white;
+    color: white;
 }
 
 .aboutcontent .register::before {
@@ -46,7 +52,7 @@
     transform: translate(-50%, -50%);
     width: 0;
     height: 0;
-    background-color: rgba(130, 126, 126, 0.3); 
+    background-color: rgba(130, 126, 126, 0.3);
     border-radius: 50%;
     z-index: -1;
     transition: width 0.3s ease-out, height 0.3s ease-out;
@@ -56,81 +62,74 @@
     width: 250px;
     height: 250px;
 }
-.image img{
+
+.image img {
     height: 150px;
-    width:150px;
+    width: 150px;
 }
 
-.image{
-    margin:2%;
+.image {
+    margin: 2%;
     border: 5px solid transparent;
     border-image: linear-gradient(10deg, rgb(187, 4, 4), rgb(30, 30, 118));
     border-image-slice: 1;
-    animation: borderAnimation 5s ease-in-out infinite;
+    animation: borderAnimation 10s ease-in-out infinite;
 }
 
-.rightanimation{
-    animation: borderAnimation2 5s ease-in-out infinite;
+.rightanimation {
+    animation: borderAnimation2 10s ease-in-out infinite;
 }
 
-.aboutimages{
+.aboutimages {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width:100%;
+    width: 100%;
     flex-wrap: wrap;
-}
-
-@media only screen and (max-width:800px){
-    .aboutheading{
-        font-size: 2.4rem;
-    }
-}
-
-@media only screen and (max-width:520px){
-    .aboutheading{
-        font-size: 2.2rem;
-    }
-
-    .image img{
-        height: 130px;
-        width:120px;
-        border-radius: 10px;
-    }
 }
 
 
 @keyframes borderAnimation {
-    0%, 100% {
+
+    0%,
+    100% {
         transform: rotate(0deg);
     }
+
     25% {
         transform: rotate(20deg);
     }
+
     50% {
         transform: rotate(-20deg);
     }
+
     75% {
         transform: rotate(20deg);
     }
 }
 
 @keyframes borderAnimation2 {
-    0%, 100% {
+
+    0%,
+    100% {
         transform: rotate(0deg);
     }
+
     25% {
         transform: rotate(-15deg);
     }
+
     50% {
         transform: rotate(15deg);
     }
+
     75% {
         transform: rotate(-15deg);
     }
 }
 
-.circles{
+.circles {
     position: absolute;
     top: 50%;
     left: 0;
@@ -139,7 +138,7 @@
     overflow: hidden;
 }
 
-.circles li{
+.circles li {
     position: absolute;
     display: block;
     list-style: none;
@@ -148,10 +147,10 @@
     background: rgba(255, 255, 255, 0.2);
     animation: animate 5s linear infinite;
     bottom: -150px;
-    
+
 }
 
-.circles li:nth-child(1){
+.circles li:nth-child(1) {
     left: 25%;
     width: 80px;
     height: 80px;
@@ -159,7 +158,7 @@
 }
 
 
-.circles li:nth-child(2){
+.circles li:nth-child(2) {
     left: 10%;
     width: 20px;
     height: 20px;
@@ -167,14 +166,14 @@
     animation-duration: 12s;
 }
 
-.circles li:nth-child(3){
+.circles li:nth-child(3) {
     left: 70%;
     width: 20px;
     height: 20px;
     animation-delay: 5s;
 }
 
-.circles li:nth-child(4){
+.circles li:nth-child(4) {
     left: 40%;
     width: 60px;
     height: 60px;
@@ -182,28 +181,28 @@
     animation-duration: 18s;
 }
 
-.circles li:nth-child(5){
+.circles li:nth-child(5) {
     left: 45%;
     width: 20px;
     height: 20px;
     animation-delay: 0s;
 }
 
-.circles li:nth-child(6){
+.circles li:nth-child(6) {
     left: 75%;
     width: 110px;
     height: 110px;
     animation-delay: 3s;
 }
 
-.circles li:nth-child(7){
+.circles li:nth-child(7) {
     left: 35%;
     width: 150px;
     height: 150px;
     animation-delay: 7s;
 }
 
-.circles li:nth-child(8){
+.circles li:nth-child(8) {
     left: 50%;
     width: 25px;
     height: 25px;
@@ -211,7 +210,7 @@
     animation-duration: 45s;
 }
 
-.circles li:nth-child(9){
+.circles li:nth-child(9) {
     left: 10%;
     width: 15px;
     height: 15px;
@@ -219,7 +218,7 @@
     animation-duration: 35s;
 }
 
-.circles li:nth-child(10){
+.circles li:nth-child(10) {
     left: 85%;
     width: 150px;
     height: 150px;
@@ -231,16 +230,45 @@
 
 @keyframes animate {
 
-    0%{
+    0% {
         transform: translateY(0) rotate(0deg);
         opacity: 1;
         border-radius: 0;
     }
 
-    100%{
+    100% {
         transform: translateY(-1000px) rotate(720deg);
         opacity: 0;
         border-radius: 50%;
     }
 
+}
+
+@media only screen and (max-width:900px) {
+    .aboutcontent .register  {
+        margin-top: 6%;
+    }
+}
+
+@media only screen and (max-width:580px) {
+    .aboutheading {
+        font-size: 2.6rem;
+    }
+
+    .aboutcontent {
+        font-size: 1.1rem;
+    }
+
+    .image img {
+        height: 120px;
+        width: 110px;
+        border-radius: 10px;
+    }
+
+}
+
+@media only screen and (max-width:410px) {
+    .aboutheading {
+        font-size: 2.2rem;
+    }
 }
