--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -50,13 +50,54 @@
     margin: 0 3%;
 }
 
-.homepage .register a{
+.homepage .register a {
     text-decoration: none;
-    color:white;
+    color: white;
     font-size: 1.35rem;
     font-weight: 500;
 }
 
 .homepage .button button:hover {
     transform: scale(1.1);
+}
+
+@media only screen and (max-width:750px){
+    .homepage .event{
+        font-size: 5rem;
+    -webkit-text-stroke: 1px white;
+    }
+
+    .homepage .tagline {
+        width: 80%;
+        margin-bottom: 5%;
+    }
+
+    .homepage .button button {
+        font-size: 1rem;
+    }
+
+    .homepage .register a {
+        font-size: 1.1rem;
+    }
+}
+
+@media only screen and (max-width:580px){
+    .homepage .event{
+        font-size: 4rem;
+    }
+
+    .homepage .tagline {
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (max-width:450px){
+    .homepage .event{
+        font-size: 3rem;
+    }
+
+    .homepage .tagline {
+        font-size: 1rem;
+        width: 90%;
+    }
 }
