changes in timeline

--- a/client/src/Components/Timeline/Timeline.css
+++ b/client/src/Components/Timeline/Timeline.css
@@ -175,6 +175,18 @@
     .right-container img{
         left:-17%;
     } 
+    .text-box{
+        padding:1%;
+    }
+
+    .text-box h2{
+        font-size: 1.3rem;
+    }
+
+    .text-box p{
+        font-size: 1rem;
+    }
+
 }
 
 
