--- a/client/src/Components/Timeline/Timeline.css
+++ b/client/src/Components/Timeline/Timeline.css
@@ -1,6 +1,4 @@
 .timelinesection{
-    background: #0f1014;
-    /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); */
     color: white;
 }
 
@@ -200,7 +198,7 @@
 :root{
     --gird-width:30px;
     --gird-height:30px;
-    --line-color:white;
+    --line-color:rgb(249, 242, 242);
     --dot-color:white;
     --dot-size:2px;
     --point-gap-width:calc(var(--gird-width) * 4);
@@ -216,8 +214,7 @@
   .ba-grid{
     position: relative;
     z-index: 1;
-    
-    background: rgb(23, 23, 23); 
+    background: linear-gradient(to right, rgb(20, 20, 36), rgb(1, 1, 44));
     /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  */
   }
   
