--- a/client/src/Components/About/About.css
+++ b/client/src/Components/About/About.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 3%;
     color: white;
-    background: #0f1014;
+    background: linear-gradient(to right, rgb(20, 20, 36), rgb(1, 1, 44));
 }
 
 .aboutheading {
