--- a/client/src/Components/ExploreCard/ExploreCard.css
+++ b/client/src/Components/ExploreCard/ExploreCard.css
@@ -1,5 +1,5 @@
 .exploresection {
-  background: linear-gradient(to right, rgb(20, 20, 36), rgb(1, 1, 44));
+    background:rgb(1, 1, 26);
   /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); */
   color: white;
 }
