--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -5,7 +5,7 @@
 }
 
 .footer{
-    background: linear-gradient(to right, rgb(20, 20, 36), rgb(1, 1, 44));  
+    background:rgb(1, 1, 26); 
     /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  */
 }
 
@@ -77,7 +77,7 @@
 }
 
 .footer-bottom{
-    background: linear-gradient(to right, rgb(20, 20, 36), rgb(1, 1, 44));
+    background:rgb(1, 1, 26);
     color:white;
     text-align: center;
     font-size: 1.05rem;
