--- a/client/src/Components/Prizes/Prizes.css
+++ b/client/src/Components/Prizes/Prizes.css
@@ -2,16 +2,26 @@
     background:rgb(1, 1, 26);
     color:white;
     padding:2% 0;
+    min-height: 80vh;
+    padding: 10vh 0;
 }
 
-.heading{
+.prizeHeading{
     font-size: 3rem;
     text-align: center;
-    font-weight: 600;
+    /* color: cyan; */
+    font-size: 3rem;
+    padding: 10vh 0;
+}
+
+@media (max-width: 768px) {
+    .prizeHeading {
+        font-size: 2rem;
+    }
 }
 
 .prizecontainer{
-    background:rgb(2, 2, 43);
+    background:#060718;
     width:85%;
     padding:1%;
     margin:auto;
