--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400..700&display=swap');
 
+
 .homepage {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     /* padding: 5%; */
-    background: #0f1014;
+    background: #060718;
     color: white;
     position: relative;
     z-index: 1;
@@ -61,7 +62,7 @@
 }
 
 .homepage .register {
-    background-color: blue;
+    background-color: #060718;
     color: white;
     margin: 0 3%;
 }
