--- a/client/src/Components/Faculty/About.css
+++ b/client/src/Components/Faculty/About.css
@@ -29,3 +29,43 @@
     justify-content: space-evenly;
     padding: 0 5vw;
 }
+
+.img>img{
+    width: 10rem;
+    height: 10rem;
+    object-fit: cover;
+    border-radius: 100%;
+}
+
+.facultyBox{
+    /* border: 2px solid red; */
+    height: 40vh;
+    width: 18vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: cyan;
+    color: black;
+    border-radius: 1rem;
+}
+
+@media (max-width: 768px) {
+    .facultyBox {
+        width: 80vw;
+        height: 50vh;
+        margin: 2rem 0;
+    }
+}
+
+.name{
+    font-size: 1.3rem;
+    margin: 1rem 0;
+    font-weight: bold;
+}
+
+.posiiton{
+    font-size: 1rem;
+    margin: 1rem 0;
+    text-align: center;
+}
