--- a/client/src/Components/About/two.css
+++ b/client/src/Components/About/two.css
@@ -11,8 +11,9 @@
 
 .aboutHeading {
     background: #060718;
-    font-size: 3rem;
+    font-size: 4rem;
     margin: 10vh 0;
+    padding-left: 2vw;
     /* padding: 5vh 0; */
 }
 
@@ -29,32 +30,17 @@
 
 .sidebar {
     /* border: 2px solid red; */
+    /* height: 20vh; */
     flex: 1;
     margin: 0;
-    height: 100%;
+    height: 60vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: end;
     margin: 0 1rem;
-    padding: 2vh 0;
-    position: relative;
-}
-
-.sidebar::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    /* Position the line in the middle of the sidebar */
-    left: 0;
-    width: 100%;
-    /* Extend the line across the entire sidebar */
-    height: 1px;
-    /* Set the height of the line */
-    background-color: grey;
-    /* Color of the line */
-    z-index: -1;
-    /* Ensure the line is behind the text */
+    /* padding: 2vh 0; */
+    /* position: relative; */
 }
 
 .sidebar p {
@@ -72,6 +58,12 @@
     flex: 4;
 }
 
+.about>p{
+    font-size: 1.2rem;
+    width: 37vw;
+    text-align: justify;
+}
+
 .about>p:first-child {
     margin-bottom: 5vh;
 }
@@ -86,6 +78,11 @@
     justify-content: center;
     margin: 15vh 0;
     font-size: 2rem;
+    transition: transform 0.5s ease; 
+}
+
+.register:hover{
+    transform: scale(1.2);
 }
 
 @media (max-width: 768px) {
