--- a/client/src/Components/Prizes/Prizes.css
+++ b/client/src/Components/Prizes/Prizes.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 .prize{
-    background:rgb(1, 1, 26);
+    background:#060718;
     color:white;
     padding:2% 0;
     min-height: 80vh;
@@ -11,7 +13,8 @@
     text-align: center;
     /* color: cyan; */
     font-size: 3rem;
-    padding: 10vh 0;
+    padding-top: 10vh;
+    /* padding-bottom: 0; */
 }
 
 @media (max-width: 768px) {
@@ -22,8 +25,8 @@
 
 .prizecontainer{
     background:#060718;
-    width:80%;
-    padding:1%;
+    width:70%;
+    /* padding:1%; */
     margin:auto;
     margin-top:2%;
     display: flex;
@@ -32,9 +35,9 @@
 }
 
 .prizebox{
-    background: #00FFF8;
-    color:rgb(1, 1, 26);
-    margin:2% 3%;
+    /* background: #8d8d8d; */
+    color:rgb(255, 255, 255);
+    margin:2rem 3rem;
     height:250px;
     width:250px;
     border-radius: 1rem;
@@ -42,8 +45,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 5px 5px 20px rgba(195, 189, 189, 0.5);
+    /* box-shadow: 5px 5px 20px rgba(195, 189, 189, 0.5); */
     cursor: pointer;
+}
+
+.img{
+    margin: 5rem 0;
+    max-width: 70%;
+    max-height: 50%;
 }
 
 .prizebox:hover img{
@@ -58,8 +67,14 @@ img{
 .position, .price{
     font-size: 1.4rem;
     font-weight: 500;
+    font-family: "Roboto Mono", sans-serif;
+}
+
+.price{
+    color: cyan;
 }
 
 .position{
     text-align: center;
 }
+
