--- a/client/src/Components/events/about.css
+++ b/client/src/Components/events/about.css
@@ -15,6 +15,12 @@
     margin-bottom: 10vh;
 }
 
+@media (max-width: 768px){
+    .eventsMain h1{
+        font-size: 2rem;
+    }
+}
+
 .comingSoon{
     color: cyan;
     display: flex;
