--- a/client/src/Components/About/two.css
+++ b/client/src/Components/About/two.css
@@ -68,6 +68,13 @@
     margin-bottom: 5vh;
 }
 
+@media (max-width: 768px) {
+    .about>p {
+        font-size: 1rem;
+        width: 80vw;
+    }
+}
+
 
 
 .register {
