--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -26,6 +26,20 @@
     margin-top:2%;
   }
 
+@media(max-width: 768px){
+    .text-behind {
+        position: relative;
+        top:0;
+        z-index: 0;
+        display: flex;
+        justify-content: center;
+      }
+    .osdhacklogo{
+        height: 20vh;
+        width:auto;
+    }
+}
+
 .homepage .event {
     font-size: 6rem;
     margin: 3%;
@@ -142,4 +156,12 @@
         font-size: 1.3rem;
         width: 90%;
     }
+}
+
+
+@media(max-width: 768px){
+    .spline{
+        display:none;
+    }
+    
 }
