--- a/client/src/Components/About/About.css
+++ b/client/src/Components/About/About.css
@@ -19,7 +19,7 @@
 }
 
 .aboutcontent .para {
-    background-color: rgba(22, 77, 124, 0.5);
+    /* background-color: rgba(22, 77, 124, 0.5); */
     padding: 10px;
     border-radius: 10px;
     margin-top:0.5%;
@@ -69,7 +69,7 @@
 }
 
 .image {
-    margin: 2%;
+    margin: 3%;
     border: 5px solid transparent;
     border-image: linear-gradient(10deg, rgb(187, 4, 4), rgb(30, 30, 118));
     border-image-slice: 1;
