--- a/client/src/Components/Timeline/Timeline.css
+++ b/client/src/Components/Timeline/Timeline.css
@@ -1,108 +1,269 @@
-.timeline{
-    min-height: 90vh;
-    background-color: #060718;
+.timelinesection{
     color: white;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 10vw;
 }
 
-.timeline h1{
-    text-align: center;
+.timeline{
+    position: relative;
+    max-width: 1200px;
+    padding:2% 8%;
 }
 
-.timelineHeadline{
+.timeline-heading{
     font-size: 3rem;
-    margin: 15vh 0;
+    font-weight: 600;
+    text-align: center;
+    padding:3%;
 }
 
-@media (max-width: 768px) {
-    .timelineHeadline{
-        font-size: 2rem;
+.container{
+    position:relative;
+    width:45%;
+    border: 3px solid rgb(10, 83, 136);
+    margin:5% 0;
+    animation:movedown 1s linear forwards;
+    opacity: 0;
+    color:black;
+    cursor: pointer;
+    border-radius: 5%;
+    background: #4e54c8;
+}
+
+.container p{
+    font-weight: 500;
+    font-size: 1.1rem;
+}
+
+@keyframes movedown{
+    0%{
+        opacity: 1;
+        transform: translateY(-30px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
     }
 }
 
-.timeWrap{
-    margin-bottom: 20vh;
-    padding: 0 10vw;
+.text-box{
+    background-color: white;
+    padding:3%;
+    border-top-left-radius:60%;
+    border-bottom-right-radius: 30%;
+    border-bottom-left-radius: 10%;
+    border-top-right-radius: 15%;
 }
 
-.time{
-    display: flex;
-    flex-direction: row;
-    flex-direction: column;
-    justify-content: center;
-    /* border: 2px solid red; */
+.left-container{
+    left:0;
 }
 
-.time>div{
-    display: flex;
-    justify-content: center;
-    margin: 5vh 0;
+.right-container{
+    left:54%;
 }
 
-.time>div>p{
-    /* flex: 2; */
-    border: 20px solid cyan;
-    border-radius: 100%;
-    font-size: 1.5rem;
-    width: 8vw;
-    height: 8vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container img{
+    position: absolute;
+    width:50px;
+    height:50px;
+    right:-13%;
+    top:20%;
+    z-index:10;
+    border:2px solid transparent;
+    border-image:linear-gradient(45deg, #0e1f68, #c40323);
+    border-image-slice: 1;
 }
 
-.time>div>.right{
-    /* border: 2px solid red; */
-    flex:3;
-    /* padding: 0 10vw; */
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding-bottom: 2rem;
-    /* width: 20vw; */
+.right-container img{
+    left:-16%;
 }
 
-.time>div>.right>p{
-    margin: 0 2vw;
-    font-size: 2rem;
+.timeline::after{
+    content: "";
+    position: absolute;
+    width:2px;
+    height:100%;
+    background-color: rgb(98, 96, 96);
+    top:0;
+    left:49.3%;
+    z-index:1;
+    border-radius: 20px;
+    animation:moveline 7s linear forwards;
 }
 
-.time>div>.right>div{
-    width: 50vw;
-}
-
-@media (max-width: 768px) {
-   .time{
-    display: none;
-   }
-}
-
-.timeSmall{
-    display: none;
-}
-
-@media (max-width: 768px) {
-    .timeSmall{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+@keyframes moveline{
+    0%{
+        height:0;
     }
-
-    .timeSmall>div>h4{
-        font-size: 2rem;
-        color: cyan;
-        padding: 1vh 0;
-    }
-
-    .timeSmall>div>h5{
-        font-size: 1.5rem;
-        padding: 1vh 0;
-    }
-    .timeSmall>div>p{
-        padding: 1vh 0;
+    100%{
+        height:100%;
     }
 }
+
+@media screen and (max-width:1000px){
+    .container img{
+        right:-18%;
+    }
+    .right-container img{
+        left:-19%;
+    } 
+}
+
+@media screen and (max-width:800px){
+    .container img{
+        right:-17%;
+    }
+    .right-container img{
+        left:-19%;
+    } 
+}
+
+@media screen and (max-width:700px){
+    .timeline::after{
+        left:4%;
+    }
+
+    .right-container{
+        left:4%;
+    }
+
+    .left-container{
+        left:5%;
+    }
+
+    .container{
+        width:98%;
+    }
+
+    .container img{
+        left:-15%;
+    }
+    .right-container img{
+        left:-14%;
+    } 
+}
+
+@media screen and (max-width:500px){
+    .timeline{
+        padding:0 10%;
+    }
+
+    .left-container,.right-container{
+        left:7%;
+    }
+
+    .container img{
+        left: -21%;
+    }
+    .right-container img{
+        left:-21%;
+    } 
+    .text-box{
+        padding:1%;
+    }
+
+    .text-box h2{
+        font-size: 1.3rem;
+    }
+
+    .text-box p{
+        font-size: 1rem;
+    }
+
+}
+
+
+/* grid animation  */
+
+
+:root{
+    --gird-width:30px;
+    --gird-height:30px;
+    --line-color:rgb(249, 242, 242);
+    --dot-color:white;
+    --dot-size:2px;
+    --point-gap-width:calc(var(--gird-width) * 4);
+    --point-gap-height:calc(var(--gird-height) * 4);
+  }
+ 
+  .grid-bg{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  
+  .ba-grid{
+    position: relative;
+    z-index: 1;
+    background:rgb(21, 21, 31);
+  }
+  
+  
+  .ba-grid:before,
+  .ba-grid:after,
+  .inner:before,
+  .inner:after{
+    content:'';
+    position: absolute;
+    z-index: 1;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    mix-blend-mode: overlay;
+  }
+  
+  .ba-grid:before{
+    background-image: 
+      linear-gradient(var(--line-color), transparent 1px),
+      linear-gradient(to right, var(--line-color), transparent 1px);
+    background-size:
+      100% var(--gird-height),
+      var(--gird-width) 100%;
+  }
+  
+  .ba-grid:after{
+    background-image: radial-gradient(var(--dot-color) 1px, transparent 1px);
+    background-size: var(--point-gap-width) var(--point-gap-height);
+    background-position: calc(var(--point-gap-width) / 2) calc(var(--point-gap-height) / 2);
+  }
+  
+  
+  
+  .inner:before,
+  .inner:after{
+    background-image: radial-gradient(var(--dot-color) var(--dot-size), transparent var(--dot-size));
+    background-size: var(--point-gap-width) var(--point-gap-height);
+    background-position: calc(var(--point-gap-width) / 2) calc(var(--point-gap-height) / 2);  
+  
+  }
+  
+  .inner:after{
+    
+    transform: scale(1.1, 1.1);
+  }
+  
+  .inner:before{
+  
+    transform: scale(1.2, 1.2);
+  }
+  
+  .anim:after{
+    animation: 6.4s linear move infinite;
+  }
+  
+  .anim .inner:after{
+    animation: 3.2s linear move infinite;
+  }
+  
+  .anim .inner:before{
+    animation: 1.6s linear move infinite;
+  }
+  
+  @keyframes move{
+    0%{
+      background-position:calc(var(--point-gap-width) / 2) calc(var(--point-gap-height) / 2);
+    }
+    100%{
+      background-position:calc(var(--point-gap-width) / 2) calc(var(--point-gap-height) / 2 * -1);
+    }
+  }
