--- a/client/src/pages/Team/Team.css
+++ b/client/src/pages/Team/Team.css
@@ -19,7 +19,7 @@
 .member-card {
     background-color: rgba(146, 142, 142, 0.8);
     border-radius: 4%;
-    padding: 0.7%;
+    padding: 0.4%;
     margin:2%;
     cursor: pointer;
 }
@@ -34,17 +34,18 @@
 .profile-picture {
     width: 100%;
     height: 100%;
-    border-radius: 10%;
+    /* border-radius: 10%; */
 }
 
 .member-name {
     color: #fff;
     font-size: 2rem;
     text-transform: uppercase;
+    font-weight: 600;
 }
 
 .member-role {
-    color: #928a8a;
+    color: #f2e9e9;
     margin-bottom: 2%;
     font-size: 1.5rem;
 }
