--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -98,7 +98,7 @@
     justify-content: center;
 }
 
-.hbutton button {
+.hbutton a {
     border: 0;
     outline: 0;
     margin: 1% 3%;
@@ -110,7 +110,7 @@
     border-radius: 10%;
 }
 
-.hbutton button a {
+.hbutton  a {
     color: #00FFF8;
     text-decoration: none;
     font-size: 1.1rem;
