--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -115,7 +115,7 @@
     font-size: 1.1rem;
 }
 
-.hbutton button:hover {
+.hbutton a:hover {
     transform: scale(1.1);
 }
 
@@ -153,7 +153,7 @@
         bottom: 3%;
     }
 
-    .hbutton button a {
+    .hbutton a {
         font-size: 1rem;
     }
 
@@ -184,7 +184,7 @@
         bottom: 1%;
     }
 
-    .hbutton button a {
+    .hbutton a {
         font-size: 0.8rem;
     }
 }
@@ -204,7 +204,7 @@
         width: 90%;
     }
 
-    .hbutton button a {
+    .hbutton a {
         font-size: 0.6rem;
     }
 }
